FLEX-35322 Basic: fixed jumping icons in NumericStepper spinner buttons

--- a/frameworks/projects/Basic/src/main/resources/defaults.css
+++ b/frameworks/projects/Basic/src/main/resources/defaults.css
@@ -483,6 +483,13 @@ Spinner
 	font-size: 6px;
 }
 
+.SpinnerButton:hover
+{
+	padding: 0;
+	margin: 0;
+	font-size: 6px;
+}
+
 StringItemRenderer
 {
 	IBeadController: ClassReference("org.apache.flex.html.beads.controllers.ItemRendererMouseController");
